welcome.lessons.welcome.methods.slug.SlugHunting.scala.error
SlugHunting:18: error: not found: value aisseBrosse
    aisseBrosse();
    ^